2008-06-26  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c (get_previous_window_if_last):
	Renamed get_last_window()
	(hildon_stackable_window_map, hildon_stackable_window_unmap)
	(hildon_stackable_window_unset_program):
	Simplified code.
	(get_previous_window_if_last):
	Detect if the window hasn't been added to a HildonProgram.

2008-06-26  Alejandro G. Castro <alex@igalia.com>

	contributed and reviewed by: Claudio Saavedra <csaavedra@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_axis_scroll), 
	(hildon_pannable_area_scroll),
	(hildon_pannable_area_timeout),
	(hildon_pannable_calculate_vel_factor),
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_class_init), 
	(hildon_pannable_area_init),
	(hildon_pannable_area_scroll_to), 
	(hildon_pannable_area_jump_to),
	(hildon_pannable_area_scroll_to_child),
	(hildon_pannable_area_jump_to_child):	
	* src/hildon-pannable-area.h: Added the new API functions:
	hildon_pannable_area_scroll_to, hildon_pannable_area_jump_to,
	hildon_pannable_area_scroll_to_child,
	hildon_pannable_area_jump_to_child


	* examples/Makefile.am
	* examples/hildon-pannable-area-example-2.c
	* examples/hildon-pannable-area-example-3.c: Added these two new
	examples in order to test and show how the new APIs work.

2008-06-25  Alberto Garcia  <agarcia@igalia.com>

	* examples/hildon-stackable-window-example.c (new_window):
	* src/Makefile.am (noinst_HEADERS):
	* src/hildon-program.c (hildon_program_go_to_root_window):
	* src/hildon-program.h:
	* src/hildon-stackable-window-private.h:
	* src/hildon-stackable-window.c:
	* src/hildon-stackable-window.h:
	Create hildon-stackable-window-private.h
	Move hildon_stackable_window_go_to_root_window() to HildonProgram

	* examples/hildon-app-menu-example.c (create_menu):
	* examples/hildon-hvolumebar-insensitive-example.c (main):
	* examples/hildon-hvolumebar-timer-example.c (on_idle):